# the-gastric-cancer-risk-calculator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  REPOSITORY_HISTORY.md  REPRODUCIBILITY.md  VALIDATION_REPORT.md  app.py  environment.yml  pyproject.toml  pytest.ini  requirements.txt  risk_calculator.py
data/: README.md
docs/: BASELINE_ESTIMATION.md  conf.py  index.rst
docs/api/: index.rst
models/: __init__.py  constants.py  cox_model.py  han2012_jco.json  heuristic_klass.json  variable_mapper_tcga.py
tests/: __init__.py  conftest.py  test_app_smoke.py  test_bootstrap.py  test_cox_model.py  test_logging_config.py  test_math_verification.py  test_property_based.py  test_readme_examples.py  test_risk_calculator_integration.py  test_risk_model.py  test_variable_mapper.py  test_visualization.py
tests/fixtures/: dummy_data.tsv
utils/: __init__.py  bootstrap.py  logging_config.py  visualization.py
