[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gastric-cancer-risk-calculator"
version = "0.1.0"
description = "Educational framework for gastric cancer risk stratification and survival modeling"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Maximilian Herbert Dressler"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = ["gastric cancer", "risk prediction", "survival analysis", "cox model", "oncology"]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "hypothesis>=6.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=2.0",
]
demo = [
    "streamlit>=1.28",
    "watchdog>=3.0",  # For streamlit file watching
]

[project.urls]
Repository = "https://github.com/Herbert-Research/the-gastric-cancer-risk-calculator"
Documentation = "https://github.com/Herbert-Research/the-gastric-cancer-risk-calculator#readme"
DOI = "Pending - Zenodo DOI will be added after first public release"

[tool.setuptools.packages.find]
include = ["*"]
exclude = ["tests*", "data*", "example_outputs*"]

[project.scripts]
gastric-risk = "risk_calculator:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]  # Line length handled by black

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
strict = true
check_untyped_defs = true
disallow_untyped_decorators = true

# Allow third-party libraries without type stubs
[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "matplotlib.*",
    "seaborn.*",
    "sklearn.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.coverage.run]
source = ["risk_calculator", "models", "utils"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
fail_under = 70  # Add this line
